# benchmarking-graphrag

./: .dockerignore  .editorconfig  docker-compose.yml  requirements.txt
graphrag-neo4j-langchain/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
graphrag-neo4j-langchain/.cursor/plans/: graphrag_neo4j_langgraph_56cae88f.plan.md
graphrag-neo4j-langchain/chains/: graph_qa_chain.py
graphrag-neo4j-langchain/docs/: documento_1.txt  documento_2.txt  documento_3.txt  documento_4.txt  documento_5.txt
graphrag-neo4j-langchain/docs/og_us_production/: LA_2024.txt  NM_2024.txt  README.md  TX_2024.txt
graphrag-neo4j-langchain/docs/tmp/: LA_2020.txt  LA_2021.txt  LA_2022.txt  LA_2023.txt  NM_2020.txt  NM_2021.txt  NM_2022.txt  NM_2023.txt  TX_2020.txt  TX_2021.txt  TX_2022.txt  TX_2023.txt
graphrag-neo4j-langchain/examples/: og_graphrag_example.py  og_graphrag_query_eval.py  og_prepare_graphrag_input.py  og_qa_eval_set.csv  simple_graphrag_example.py
graphrag-neo4j-langchain/outputs/: og_query_eval_results.csv
graphrag-neo4j-langchain/scripts/: run_indexing.py  run_query.py
graphrag-neo4j-langchain/src/graphrag/: __init__.py  config.py  llm_factory.py  state.py
graphrag-neo4j-langchain/src/graphrag/chains/: __init__.py  (+4 more)
graphrag-neo4j-langchain/src/graphrag_neo4j_langchain.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
graphrag-neo4j-langchain/tools/: parse_vector_search.py
naive-rag-opensearch/: .env.example  README.md  pyproject.toml
naive-rag-opensearch/naive_rag_opensearch/: __init__.py  cli.py  rag.py
(+45 files in other folders)
