[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphrag-neo4j-langchain"
version = "0.1.0"
description = "GraphRAG with Neo4j, LangGraph and LangChain"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tiktoken>=0.7.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "neo4j>=5.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
indexing = [
    "igraph>=0.11.0",
    "networkx>=3.0",
]

[project.scripts]
graphrag-query = "main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["graphrag*"]
